<resources>
    <string name="app_name">Study Center</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="logout">Logout</string>
    <string name="studycenter">StudyCenter</string>
    <string name="todo">TODO</string>
    <string name="_998">+998</string>
    <string name="login">Login</string>
    <string name="login_btn">LOGIN</string>
    <string name="number">Number</string>
    <string name="verify_mobile">Verify mobile</string>
    <string name="verify">Verify</string>
    <string name="nurulloxon">Nurulloxon</string>
    <string name="kenjaxo_jayev">Kenjaxo\'jayev</string>
    <string name="age">Yosh:</string>
    <string name="_20">20</string>
    <string name="gender">Jinsi</string>
    <string name="male">Erkak</string>
    <string name="phone_1">Tel 1:</string>
    <string name="_998907804240">+998907804240</string>
    <string name="phone_2">Tel 2:</string>
    <string name="_998910446710">+998910446710</string>
    <string name="course_name">Kursi</string>
    <string name="_123">123</string>
    <string name="course_level">Daraja</string>
    <string name="beginner">Boshlang\'ich</string>
    <string name="course_days">Dars kunlari</string>
    <string name="dush_chor_juma">Dush, Chor, Juma</string>
    <string name="status">Holati</string>
    <string name="o_qishni_boshladi">O\'qishni boshladi</string>
    <string name="_321">321</string>
    <string name="group_name">Gruhi</string>
    <string name="marketing">Marketing</string>
    <string name="tanishlar">Tanishlar</string>
    <string name="contract">Shartnoma</string>
    <string name="tuzilgan">Tuzilgan</string>
    <string name="return_to_home">Return To Home</string>
    <string name="dostonbek123456">dostonbek123456</string>
    <string name="password">Parol</string>
    <string name="husanovdostonbek2007">husanovdostonbek2007</string>
    <string name="id">Id</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yoshi">Yoshi</string>
    <string name="ma_lumoti">Ma\'lumoti</string>
    <string name="english">English</string>
    <string name="english_1">English #1</string>
    <string name="welcome">Xush kelibsiz</string>
</resources>